[package]
name = "leprd"
authors = ["StackDoubleFlow <stackdoubleflow@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.16"
id-arena = "2"
byteorder = "1"
dirs = "5.0"
whoami = "1.5"
nix = { version = "0.28", features = ["fs"] }
